--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <!-- Imagem -->
     <section class="image-section">
-      <img src="/image/Login foto.png" alt="LeBlanc Coffee - Café artesanal" />
+      <img src="Loginfoto.png" alt="LeBlanc Coffee - Café artesanal" />
     </section>
   </div>
 </body>
