--- a/index1.html
+++ b/index1.html
@@ -41,7 +41,7 @@
     </section>
 
     <section class="image-section">
-      <img src="/image/image.jpg" alt="Embalagens Leblanc Coffee" />
+      <img src="image.jpg" alt="Embalagens Leblanc Coffee" />
     </section>
   </div>
 </body>
