--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
   <nav class="sidebar">
     <div class="sidebar-header">
       <a href="/html/index1.html">
-        <img src="/image/logo.png" alt="Leblanc Coffee" style="cursor:pointer" />
+        <img src="logo.png" alt="Leblanc Coffee" style="cursor:pointer" />
       </a>
     </div>
     <ul class="sidebar-menu">
