--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard Leblanc Coffee - Cadastro</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles1.css">
 
  <!-- Supabase CDN -->
   <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
