--- a/index1.html
+++ b/index1.html
@@ -7,12 +7,6 @@
   <title>Dashboard Leblanc Coffee - Cadastro</title>
   <link rel="stylesheet" href="styles1.css">
 
- <!-- Supabase CDN -->
-  <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-
-  <!-- Script do projeto -->
-  <script defer src="/js/script.js"></script>
-
 </head>
 
 <body>
@@ -64,5 +58,11 @@
     </section>
   </div>
 </body>
+
+   <!-- Supabase CDN -->
+  <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+
+  <!-- Script do projeto -->
+  <script defer src="script1.js"></script>
 
 </html>
