--- a/index2.html
+++ b/index2.html
@@ -136,9 +136,9 @@
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2" defer></script>
-  <script src="/js/scripy2.js" defer></script>
+  <script src="scripy2.js" defer></script>
 
-  <a href="/html/index1.html" class="btn-sair">Sair</a>
+  <a href="index.html" class="btn-sair">Sair</a>
 </body>
 
 </html>
