--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </form>
 
       <p class="no-account">Não tem uma conta?</p>
-      <a href="index.html" class="secondary">Cadastre‑se agora</a>
+      <a href="index1.html" class="secondary">Cadastre‑se agora</a>
     </section>
 
     <section class="image-section">
