--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
   <!-- Sidebar -->
   <nav class="sidebar">
     <div class="sidebar-header">
-      <a href="/html/index1.html">
+      <a href="index.html">
         <img src="logo.png" alt="Leblanc Coffee" style="cursor:pointer" />
       </a>
     </div>
